resources/dagger-workflow/argo-ui-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-workflows-server-nodeport
  namespace: argo
spec:
  type: NodePort
  ports:
  - port: 2746
    targetPort: 2746
    nodePort: 30046
    protocol: TCP
  selector:
    app: argo-workflows-server
