resources/dagger-workflow/argo-workflows-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-workflows-server-nodeport
  namespace: argo
spec:
  type: NodePort
  ports:
  - port: 2746
    targetPort: 2746
    nodePort: 32746
    protocol: TCP
  selector:
    app.kubernetes.io/instance: argo-workflows
    app.kubernetes.io/name: argo-workflows-server
